Bug 507311 - Left sidebar missing until restarting the app when opening files in Koko externally
Summary: Left sidebar missing until restarting the app when opening files in Koko exte...
Status: RESOLVED FIXED
Alias: None
Product: Koko
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-07-21 14:04 UTC by Nate Graham
Modified: 2025-08-06 13:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-07-21 14:04:31 UTC
STEPS TO REPRODUCE
1. Set Koko to be your default image viewer
2. Navigate to a location in Dolphin or Plasma Folder View with images
3. Click or double-click on an image to open it in Koko
4. Once Koko loads the image, press the Back button

OBSERVED RESULT
I'm taken to a grid view, but the left sidebar never re-appears.

EXPECTED RESULT
I'm taken to a grid view and the left sidebar re-appears.
Comment 1 Bug Janitor Service 2025-08-05 15:53:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/koko/-/merge_requests/205
Comment 2 Oliver Beard 2025-08-06 13:59:16 UTC
Git commit 627e90df3c9527a8e00d70b9f8c02df4690f2f96 by Oliver Beard.
Committed on 05/08/2025 at 18:35.
Pushed by olib into branch 'master'.

Refactor OpenFileModel and fix argument/'Open With' behaviour

More of the logic about what to open is handled in OpenFileModel, and Koko now handles arguments properly relating to incomplete model porting and broken code, fixing the 'Open With' functionality.

M  +6    -6    src/main.cpp
M  +6    -8    src/models/imagefoldermodel.cpp
M  +1    -0    src/models/imagefoldermodel.h
M  +43   -23   src/models/openfilemodel.cpp
M  +26   -7    src/models/openfilemodel.h
M  +4    -7    src/models/sortmodel.cpp
M  +2    -3    src/qml/ImageViewPage.qml
M  +76   -46   src/qml/Main.qml
M  +1    -1    src/qml/Sidebar.qml

https://invent.kde.org/graphics/koko/-/commit/627e90df3c9527a8e00d70b9f8c02df4690f2f96