Refactor OpenFileModel and fix argument/'Open With' behaviour

More of the logic about what to open is handled in OpenFileModel, and Koko now handles arguments properly relating to incomplete model porting and broken code, fixing the 'Open With' functionality.

BUG: 507311