src/models/openfilemodel.cpp
@@ -1,12 +1,8 @@
 // SPDX-FileCopyrightText: 2021 Carl Schwan <carlschwan@kde.org>
+// SPDX-FileCopyrightText: 2025 Oliver Beard <olib141@outlook.com>
 // SPDX-License-Identifier: LGPL-2.0-or-later
 
 #include "openfilemodel.h"
-
-#include "abstractimagemodel.h"
-#include "imagestorage.h"
-
-#include <QMimeDatabase>
 
 OpenFileModel::OpenFileModel(QObject *parent)
     : AbstractImageModel(parent)
@@ -19,35 +15,59 @@ QVariant OpenFileModel::data(const QModelIndex &index, int role) const
 {
     Q_ASSERT(checkIndex(index, CheckIndexOption::ParentIsInvalid | CheckIndexOption::IndexIsValid));
 
-    const auto &item = m_images[index.row()];
-    return dataFromItem(item, role);
+    const auto &fileItem = m_fileItems[index.row()];
+    return dataFromItem(fileItem, role);
 }
 
 int OpenFileModel::rowCount(const QModelIndex &parent) const
 {
-    return parent.isValid() ? m_images.size() : 0;
+    return parent.isValid() ? 0 : m_fileItems.size();
 }
 
-void OpenFileModel::updateOpenFiles(const QStringList &images)
+OpenFileModel::Mode OpenFileModel::mode() const
+{
+    return m_mode;
+}
+
+QUrl OpenFileModel::urlToOpen() const
+{
+    return m_urlToOpen;
+}
+
+void OpenFileModel::updateOpenItems(const QList<QUrl> &urls)
 {
     beginResetModel();
-    m_images.clear();
+    m_fileItems.clear();
 
-    std::ranges::transform(images, std::back_inserter(m_images), [](const auto &image) {
-        auto item = KFileItem(image);
-        item.setDelayedMimeTypes(true);
-        return item;
-    });
+    for (const QUrl &url : urls) {
+        KFileItem fileItem = KFileItem(url);
+        fileItem.setDelayedMimeTypes(true);
+
+        m_fileItems.append(fileItem);
+    }
 
     endResetModel();
-    Q_EMIT itemToOpenChanged();
-    Q_EMIT updatedImages();
-}
 
-KFileItem OpenFileModel::itemToOpen() const
-{
-    if (m_images.length() == 1) {
-        return m_images.value(0);
+    Mode mode;
+    if (m_fileItems.size() == 0) {
+        mode = Mode::OpenNone;
+    } else if (m_fileItems.size() == 1) {
+        mode = m_fileItems[0].isFile() ? Mode::OpenImage : Mode::OpenFolder;
+    } else {
+        mode = Mode::OpenMultiple;
     }
-    return {};
+
+    if (m_mode != mode) {
+        m_mode = mode;
+        Q_EMIT modeChanged();
+    }
+
+    QUrl urlToOpen = m_fileItems.size() == 1 ? m_fileItems[0].url() : QUrl();
+
+    if (m_urlToOpen != urlToOpen) {
+        m_urlToOpen = urlToOpen;
+        Q_EMIT urlToOpenChanged();
+    }
+
+    Q_EMIT updated();
 }
